--- a/Cours JS 2-6/cours/index.html
+++ b/Cours JS 2-6/cours/index.html
@@ -15,7 +15,12 @@
         <button id="btn-2">Zurich</button>
         <p>La bonne réponse est berne</p>
     </div>
-
+    <div class="mousemove"></div>
+    <div class="keypress box">
+        <h2>
+            Vous appuyer sur la touche: <span id="key"></span>
+        </h2>
+    </div>
     <script src="index.js"></script>
 </body>
 
